--- a/fgpassword.css
+++ b/fgpassword.css
@@ -7,30 +7,47 @@ a{
     list-style-type: none;
     text-decoration: none;
 }
+
+
+  
 body{
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     height: 100vh;
     display: flex;
     flex-direction: row;
     align-items: center;
+    background: #252839;
     justify-content: center;
     padding: 15px;
 }
 .opt-form{
     width: 100%;
     max-width: 550px;
+    background-color: white;
     margin: 0 auto;
     padding: 20px 30px;
     border-radius: 10px;
     box-shadow: 0 0 35px ;
     position: relative;
     z-index: 999;
-    
+       
+}
+.fg-form{
+    transform: translateX(-100px);
+    opacity: 0;
+    transition: transform 1s cubic-bezier(0.42, 0, 0.58, 1), opacity 2s ease-in-out;
+
+}
+.fg-form.in-view{
+    transform: translateX(0);
+    opacity: 1;
 }
 .header-form{
     text-align: left;
     margin-bottom: 35px;
+
 }
+
 .header-form h4{
     margin-bottom: 5px;
     font-size: 25px;
@@ -83,7 +100,15 @@ body{
 .Create-new-pw{
     width: 100%;
     opacity: 50%;
+     transform: translateX(100px);
+    opacity: 0;
+    transition: transform 1s cubic-bezier(0.42, 0, 0.58, 1), opacity 2s ease-in-out;
+
 }
+.Create-new-pw.in-view {
+    transform: translateX(0);
+    opacity: 0.4;
+  }
 .Create-new-pw h4{
     font-size: 25px;
     font-weight: 600;
