--- a/Stylings/Signup.css
+++ b/Stylings/Signup.css
@@ -1,7 +1,8 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+   font-family: 'Poppins', sans-serif;
+   box-sizing: border-box;
 }
 body{
     display: flex;
@@ -9,7 +10,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    
 }
 .main-body{
     transform: translateY( -180px);
