--- a/Stylings/fgpassword.css
+++ b/Stylings/fgpassword.css
@@ -1,7 +1,8 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+   font-family: 'Poppins', sans-serif;
+   box-sizing: border-box;
 }
 a{
     list-style-type: none;
@@ -11,7 +12,8 @@ a{
 
   
 body{
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+   font-family: 'Poppins', sans-serif;
+  /* font-family: var(--font-family); */
     height: 100vh;
     display: flex;
     flex-direction: row;
