--- a/Stylings/start.css
+++ b/Stylings/start.css
@@ -3,7 +3,8 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        font-family: 'Poppins', sans-serif;
+
      }
      body{
     /* background: #252839; */
