--- a/otp.css
+++ b/otp.css
@@ -35,10 +35,10 @@ body{
     transition: transform 1s cubic-bezier(0.42, 0, 0.58, 1), opacity 2s ease-in-out;
 
 } */
-.fg-form.in-view{
+/* .fg-form.in-view{
     transform: translateX(0);
     opacity: 1;
-}
+} */
 .otpheader-form{
     text-align: left;
     margin-bottom: 35px;
@@ -113,7 +113,7 @@ body{
 }
 
 @media (max-width:475px) {
-    .otp-pin-wrap .otp-input-code:nth-child(n+2){
+    .otp-pin-wrap .otp-input:nth-child(n+2){
         margin-left: 5px;
     }
     .otp-pin-wrap .otp-input-code:nth-child(n+2){
