--- a/Stylings/Signup.css
+++ b/Stylings/Signup.css
@@ -28,6 +28,12 @@ a{
 .main-body{
     width: 50%;
 }
+
+.error{
+    padding: 10px;
+    width: 100%;
+    color: red;
+}
 .up-text h2{
     /* margin-top: 20px; */
     font-weight: 700;
@@ -117,6 +123,11 @@ a{
     }
     .up-text p{
         font-size: 6px;
+    }
+    .error{
+        font-size: 10px;
+        padding: 0;
+        margin-top: 10px;
     }
     .pin-wrap .pin-code{
         font-size: 10px;
