--- a/Styles/Profile.css
+++ b/Styles/Profile.css
@@ -1,10 +1,13 @@
 body {
     margin: 0;
-    font-family: 'Arial', sans-serif;
+    font-family: 'Poppin', sans-serif;
     background-color: #f9f9f9;
     color: #000000;
 }
-
+a{
+    text-decoration: none;
+    list-style-type: none;
+}
 .profile-container {
     max-width: 450px;
     margin: 0 auto;
@@ -225,6 +228,9 @@ body {
 .logout-item i:first-child {
     flex-shrink: 0;
     margin-right: 10px;
+}
+.log-color i{
+    color: red;
 }
 
 .logout-item .arrow-icon {
