--- a/Styles/Withdraw.css
+++ b/Styles/Withdraw.css
@@ -6,7 +6,9 @@
     line-height: 1.6;
     font-family: 'Poppins', sans-serif;
   }
-  
+  a{
+    color: white;
+  }
   /* Navbar Styles */
   .navbar {
     display: flex;
