--- a/Styles/Reward.css
+++ b/Styles/Reward.css
@@ -16,8 +16,22 @@ header {
     background-color: #262626;
     padding: 2rem 2rem;
     color: #FFF;
-}
+
   
+transform: translateX(-100px);
+opacity: 0;
+transition: transform 1s cubic-bezier(0.42, 0, 0.58, 1), opacity 2s ease-in-out;
+
+}
+
+.header.in-view{
+transform: translateX(0);
+opacity: 1;
+}
+
+
+
+
 .header-container {
     display: flex;
     flex-direction: column;
@@ -78,7 +92,17 @@ header {
     color: #fff;
     padding: 2rem 1rem;
     text-align: center;
-}
+    transform: translateX(-100px);
+    opacity: 0;
+    transition: transform 1s cubic-bezier(0.42, 0, 0.58, 1), opacity 2s ease-in-out;
+    
+    }
+    
+    .rewards-section.in-view{
+    transform: translateX(0);
+    opacity: 1;
+    }
+    
   
 .rewards-card {
     display: flex;
@@ -88,11 +112,15 @@ header {
     border-radius: 12px;
     padding: 2rem;
 }
+.reward-info{
+    gap: 20px;
+}
   
 .reward-info h2 {
     font-size: 1.5rem;
     font-weight: 600;
     color: #000000;
+    padding-bottom: 15px;
 }
 .reward-info p{
     font-size: 14px;
@@ -117,7 +145,31 @@ header {
 .redeem-btn.clicked {
   background-color: #FFFFFF;
 }
-  
+
+.affiliates-section{
+transform: translateY(100px);
+opacity: 0;
+transition: transform 2s cubic-bezier(0.42, 0, 0.58, 1), opacity 2s ease-in-out;
+
+}
+
+.affiliates-section.in-view{
+transform: translateX(0);
+opacity: 1;
+}
+ 
+.links-section{
+transform: translateY(100px);
+opacity: 0;
+transition: transform 1s cubic-bezier(0.42, 0, 0.58, 1), opacity 2s ease-in-out;
+
+}
+
+.links-section.in-view{
+transform: translateX(0);
+opacity: 1;
+}
+
 .affiliates-section,
 .links-section {
     margin: 4rem 3rem;
@@ -130,12 +182,14 @@ header {
 .affiliates-section h3,
 .links-section h3 {
     font-size: 1.2rem;
+    padding-bottom: 15px;
 }
 .affiliates-section .write-up,
 .links-section p{
     margin-top: -5px;
     margin-bottom: 2rem;
     color: #6C757D ;
+    /* padding-bottom: 15px;    */
 }
 .affiliate-card{
     background: #f5f5f5;
@@ -146,6 +200,7 @@ header {
   
 .affiliates-section .item h4 {
     font-size: 1.3rem;
+    padding-bottom: 15px;
     font-weight: 600;
 }
 
