--- a/Stylings/convert.css
+++ b/Stylings/convert.css
@@ -6,6 +6,13 @@
     --icon-color: #F6F6F6;
     --font-family: 'Poppins', sans-serif;
   }
+
+  
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
   a{
     text-decoration: none;
     list-style-type: none;
@@ -14,33 +21,31 @@
   }
   
   body {
-    margin: 0;
-    font-family: var(--font-family);
-    background: var(--background-color);
-    color: var(--primary-color);
-  }
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-body{ font-family: 'Poppins', sans-serif;
-    /* font-family: var(--font-family); */
+    /* margin: 0; */
+     font-family: var(--font-family);
+     background: var(--background-color);
+     color: var(--primary-color);
       height: 100vh;
+      /* overflow: hidden; */
       display: flex;
-      flex-direction: row;
+      /* flex-direction: row; */
       align-items: center;
       /* background: #252839; */
       justify-content: center;
       padding: 15px;
+
   }
+
+
+
+
 .icon{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     /* height: 100vh; */
-    gap: 60px;
+    gap: 30px;
     /* border: 2px solid rebeccapurple; */
     width: 100%;
     max-width: 550px;
@@ -56,8 +61,28 @@ body{ font-family: 'Poppins', sans-serif;
     list-style-type: none;
     outline: none;
     margin-top: 25px;
-    
+    /* transform: translateY( -180px);
+    opacity: 0;
+    transition: transform 1.5s cubic-bezier(0.42, 0, 0.58, 1), opacity 2s ease-in-out; */
+
 }
+/* .icon-logo.in-view{
+transform: translateX(0);
+opacity: 1;
+} */
+
+
+.form-input{   
+     transform: translateY( 180px);
+    opacity: 0;
+    transition: transform 2s cubic-bezier(0.42, 0, 0.58, 1), opacity 2s ease-in-out;
+}
+.form-input.in-view{
+transform: translateX(0);
+opacity: 1;
+}
+
+
 .icon-logo li{
     /* border-radius: 50%; */
     /* border: 2px solid yellow; */
@@ -119,15 +144,16 @@ body{ font-family: 'Poppins', sans-serif;
 }
 .airtel:hover{
  border: 1px solid red;
- background: white;
     
 }
 img{
     box-shadow: 0 0 15px;
 }
 .mtn img{
-    width: 60px;
+    width: 70px;
     border-radius: 50%;
+    background: white;
+    padding: 6px;
 }
 .glo img{
     width: 70px;
@@ -136,9 +162,11 @@ img{
 }
 .airtel img{
     width: 70px;
-    border-radius: 50%;
+ background: red;
+ border-radius: 50%;
     /* background: ; */
 }
+
 .form-input{
     display: flex;
     flex-direction: column;
@@ -240,6 +268,9 @@ button{
   @media screen and (max-width: 480px) {
     .actions {
       grid-template-columns: repeat(2, 1fr);
+    }
+    .icon-logo{
+        padding-right: 18px;
     }
   
     .balance-container {
